# GPG-Util

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  release.yml
src/: main.cpp
